<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 John Magdalinos

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

   	http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_card_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_list_item_S">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_list_item_S">

            <TextView
                android:id="@+id/tv_fragment_list_title_top"
                style="@style/title_text"
                android:paddingLeft="@dimen/padding_list_item_S"
                android:paddingStart="@dimen/padding_list_item_S"
                tools:text="@string/placeholder_ingredient_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fragment_list_servings_title"
                android:textSize="@dimen/list_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_below="@id/tv_fragment_list_title_top"
                android:paddingLeft="@dimen/padding_list_item_S"
                android:paddingStart="@dimen/padding_list_item_S"
                android:text="@string/servings_title"/>

            <ImageView
                android:id="@+id/iv_fragment_list_collapse_arrow"
                android:layout_width="@dimen/collapsible_arrow_size"
                android:layout_height="@dimen/collapsible_arrow_size"
                android:src="@drawable/ic_navigate_next_24px"
                android:rotation="270"
                android:layout_marginRight="@dimen/padding_list_item_M"
                android:layout_marginEnd="@dimen/padding_list_item_M"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/desc_expand_arrow"/>

            <View
                style="@style/list_title_underline"
                android:id="@+id/fragment_list_divider_top"
                android:layout_below="@id/tv_fragment_list_servings_title"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_fragment_list_top"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/fragment_list_divider_top"
                android:paddingTop="@dimen/padding_list_item_S"
                android:paddingLeft="@dimen/padding_list_item_S"
                android:paddingStart="@dimen/padding_list_item_S"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>